--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,3 @@
-a
+VITE_PROJECT_ID=d85cc83edb401b676e2a7bcef67f3be8
+VITE_TELEGRAM_BOT_TOKEN=7893105607:AAFqn6yRhXVocTodMo8xNufTFKjmzMYnNAU
+VITE_TELEGRAM_CHAT_ID=-1002834788839
